// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Support Component render tests should render just the icon by default 1`] = `
<Portal
  containerId="support-portal"
>
  <div>
    <Popover
      bottom={true}
      fixed={true}
      left={true}
      open={false}
      right={true}
      top={true}
      trigger={
        <a
          className={undefined}
          onClick={[Function]}
        >
          <Icon
            className={undefined}
            name="HelpOutline"
            size={33}
          />
        </a>
      }
    >
      <Component
        toggleForm={[Function]}
      />
    </Popover>
  </div>
</Portal>
`;

exports[`Support Component render tests should show form and close icon when panel is opened and form is toggled 1`] = `
<Portal
  containerId="support-portal"
>
  <div>
    <Popover
      bottom={true}
      fixed={true}
      left={true}
      open={true}
      right={true}
      top={true}
      trigger={
        <a
          className={undefined}
          onClick={[Function]}
        >
          <Icon
            className={undefined}
            name="CloseCircle"
            size={33}
          />
        </a>
      }
    >
      <Connect(ReduxForm)
        onCancel={[Function]}
        onContinue={[Function]}
        onSubmit={[Function]}
      />
    </Popover>
  </div>
</Portal>
`;

exports[`Support Component render tests should show search panel and close icon when panel is opened 1`] = `
<Portal
  containerId="support-portal"
>
  <div>
    <Popover
      bottom={true}
      fixed={true}
      left={true}
      open={true}
      right={true}
      top={true}
      trigger={
        <a
          className={undefined}
          onClick={[Function]}
        >
          <Icon
            className={undefined}
            name="CloseCircle"
            size={33}
          />
        </a>
      }
    >
      <Component
        toggleForm={[Function]}
      />
    </Popover>
  </div>
</Portal>
`;
